# smelt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  NEOVIM_FFI_PLAN.md  README.md  REFACTOR.md  TUI_ARCHITECTURE_PLAN.md
crates/core/: Cargo.toml
crates/core/src/: alloc.rs  app_config.rs  buffer.rs  cells.rs  clipboard.rs  config.rs  confirms.rs  custom_commands.rs  engine_client.rs  fs.rs  grep.rs  headless_app.rs  history.rs  host.rs  http.rs  kill_ring.rs  lib.rs  notebook.rs  perf.rs  process.rs  runtime.rs  session.rs  state.rs  style.rs  theme.rs  timers.rs  tool_output_cache.rs  transcript_cache.rs  transcript_model.rs  transcript_present.rs  trust.rs  undo.rs  utils.rs  working.rs
crates/core/src/content/: block_layout.rs  builder.rs  context.rs  display.rs  layout_out.rs  mod.rs  selection.rs  stream_parser.rs  transcript.rs  wrap.rs
crates/core/src/fuzzy/: mod.rs  score.rs
crates/core/src/lua/: mod.rs  render_ctx.rs  runtime.rs  shared.rs  task.rs
crates/core/src/mcp/: dispatcher.rs
crates/core/src/permissions/: approvals.rs  mod.rs  rules.rs  store.rs  tests.rs  workspace.rs
crates/core/src/transcript_present/: markdown.rs  mod.rs  tool_previews.rs  tools.rs
crates/tui/: Cargo.toml
crates/tui/src/: alloc.rs  api.rs  app.rs  attachment.rs  buffer.rs  builtin_commands.rs  commands.rs  completer.rs  config.rs  cursor.rs  custom_commands.rs  format.rs  fs.rs  fuzzy.rs  grep.rs  html.rs  http.rs  instructions.rs  keymap.rs  lib.rs  lua.rs  metrics.rs  notebook.rs  pane.rs  path.rs  perf.rs  persist.rs  picker.rs  process.rs  prompt_sections.rs  session.rs  sleep_inhibit.rs  state.rs  text_utils.rs  theme.rs  undo.rs  utils.rs  vim.rs  window.rs  workspace_permissions.rs
crates/tui/src/app/: agent.rs  app_config.rs  cells.rs  cmdline.rs  commands.rs  confirms.rs  content_keys.rs  core.rs  engine_bridge.rs  engine_events.rs  events.rs  headless.rs  headless_app.rs  history.rs  host.rs  lua_bridge.rs  lua_handlers.rs  mod.rs  mouse.rs  ops.rs  ops_apply.rs  pane_focus.rs  render_loop.rs  status_bar.rs  timers.rs  transcript.rs  transcript_cache.rs  transcript_model.rs  transcript_present.rs  ui_host.rs  well_known.rs  working.rs
crates/tui/src/completer/: command.rs  file.rs  history.rs  mod.rs  pickers.rs  score.rs
crates/tui/src/content/: block_buffers.rs  context.rs  display.rs  layout.rs  layout_out.rs  mod.rs  prompt_buf.rs  prompt_data.rs  prompt_wrap.rs  scrollbar.rs  selection.rs  status.rs  stream_parser.rs  to_buffer.rs  transcript.rs  transcript_buf.rs  transcript_snapshot.rs  viewport.rs  window_view.rs
crates/tui/src/core/: agent.rs  cells.rs  clipboard.rs  cmdline.rs  commands.rs  confirms.rs  content_keys.rs  core.rs  engine_client.rs  events.rs  fs.rs  headless.rs  history.rs  host.rs  kill_ring.rs  lua_bridge.rs  lua_handlers.rs  mod.rs  mouse.rs  notebook.rs  pane_focus.rs  path.rs  render_loop.rs  status_bar.rs  timers.rs  tools.rs  transcript.rs  transcript_cache.rs  transcript_model.rs  working.rs
crates/tui/src/fuzzy/: mod.rs  score.rs
crates/tui/src/input/: buffer.rs  completer_bridge.rs  history.rs  kill_ring.rs  menu_bridge.rs  mod.rs  settings.rs  vim_bridge.rs
crates/tui/src/lua/: api.rs  app_ref.rs  confirm_ops.rs  mod.rs  render_ops.rs  task.rs  tasks.rs  ui_ops.rs
crates/tui/src/mcp/: dispatcher.rs  mod.rs
crates/tui/src/permissions/: approvals.rs  mod.rs  rules.rs  store.rs  tests.rs  workspace.rs
crates/tui/src/plugins/: plan_mode.lua
crates/tui/tests/: dialog_lifecycle.rs  dialog_overlay_interaction.rs  model_resolution.rs  overlay_edge_cases.rs  scrollback_integrity.rs
refactor/: P0.md  (+25 more)
(+449 files in other folders)
