[workspace]
members = ["crates/protocol", "crates/engine", "crates/tui", "crates/ui"]

[package]
name = "smelt-agent"
version = "0.4.7"
edition = "2021"
description = "A Rust TUI coding agent"
license = "MIT"
repository = "https://github.com/leonardcser/smelt"

[[bin]]
name = "smelt"
path = "src/main.rs"

[dependencies]
protocol = { path = "crates/protocol" }
engine = { path = "crates/engine" }
tui = { path = "crates/tui" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "rustls"] }
libc = "0.2.183"
dialoguer = "0.12.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Release-optimized build with symbols preserved, for CPU sampling profilers
# like `samply`. Build with `cargo build --profile bench-cpu`, then run
# `samply record ./target/bench-cpu/smelt`.
[profile.bench-cpu]
inherits = "release"
strip = false
debug = true

# Faster dev/test builds: dependencies don't need debug info (we never
# step into them), and line-tables-only on our own code keeps backtraces
# usable while drastically cutting link time and dSYM generation on macOS.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
opt-level = 0

[dev-dependencies]
insta = { version = "1.47.2", features = ["json", "redactions"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
wiremock = "0.6.5"
