[package]
name = "tui"
version = "0.4.7"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
engine = { path = "../engine" }
ui = { path = "../ui" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
globset = "0.4.18"
ignore = "0.4.25"
futures-core = "0.3"
syntect = "5.3.0"
two-face = "0.5.1"
similar = "2.7.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "rustls", "blocking"] }
rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process"] }
base64 = "0.22.1"
unicode-width = "0.2.2"
sha2 = "0.10.9"
tempfile = "3.27.0"
libc = "0.2.183"
flate2 = "1.1.9"
seahash = "4.1.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
dirs = "6.0.0"
scraper = "0.26.0"
ego-tree = "0.11.0"
url = "2.5.8"

[dev-dependencies]
vt100 = "0.16.2"
